# arrow-cpp-external-proj

./: CMakeLists.txt  CMakePresets.json  app.cpp
cmake_modules/: Arrow.CMakeLists.txt.cmake  InstallArrow.cmake
